2008-06-19  Sancho Lerena <slerena@gmail.com>

	* pandora_plugin: Added startup script.

	* Makefile.PL: Added new perl dependencies.

	* pandora_recon: Added sleep to main loop to save CPU.

2008-06-18  Sancho Lerena  <slerena@gmail.com>

    * pandora_dbstress.pl: Added suppor for "text" moduletypes.
    
    * pandora_recon: Now is multithreaded. Better management of already
    registered IP's. Better status update. Some fixes (xprobe2 crash).

    * Config.pm: Added support for recon_threads token.

    * Tools.pm: added pandora_trash_ascii(), autocreate
    set agent in learning mode automatically.

2008-06-17  Sancho Lerena <slerena@artica.es>

	* config.pm: Added options for xprobe2, and autocreate.

	* tools.pm: Added functions pandora_create_agent(), pandora_get_os(),
	and pandora_event() (this has been moved from DB.pm).

	* pandora_server.conf: Added options for xprobe2, autocreate and
	autocreate_group.

	* pandora_network: Added support for TCP scanning (not implemented in
	console yet), parent detection using traceroute, OS fingerprinting with
	xprobe2, event creation using central functions, and some optimizations.

	* pandora_server: Added support for agent autocreation, OS detection from
	the XML header, and event notification "new_agent" type.

	* pandora_recon: First code to implement traceroute functionality
	using Pureperl module.  Added code for remote OS fingerprinting.


2008-06-16  Sancho Lerena <slerena@artica.es>

	* pandora_snmpconsole: Solved a few bugs detected by Manu.

2008-06-13  Sancho Lerena <slerena@artica.es>

    * conf/pandora_server.conf: Added new internal MTA feature config tokens .
    
    * pandora_server_installer: Copy default plugins to /usr/share/pandora/util
    
    * Config.pm: New MTA feature tokens, and added event when starting server.
    
    * DB.pm: Changes in execute_alert function (now passes several hash refs).
    Alerts and events now use new format of events. Add support for new inter-